<resources>
    <string name="app_name" translatable="false">MessangerTest App</string>
    <string name="name">Name</string>
    <string name="phone_number_or_email">Phone Number Or Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="todo">TODO</string>
    <string name="sign_in">SIGN IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>