<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    tools:context=".Sign_in_Activity">

    <ImageView
        android:id="@+id/ImageView_icon_sign_in"
        android:layout_width="176dp"
        android:layout_height="176dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/messenger"
        android:contentDescription="@string/todo" />

    <ProgressBar
        android:visibility="invisible"
        android:layout_marginTop="16dp"
        android:id="@+id/progress_sign_in"
        style="?android:attr/progressBarStyle"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edeitText_Email_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/phone_number_or_email"
        android:inputType="textEmailAddress"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:autofillHints="" />



    <EditText
        android:id="@+id/edeitText_Password_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="HardcodedText"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:paddingBottom="16dp"
        android:enabled="false"
        android:paddingTop="16dp"
        android:textColor="@color/status_text_color"
        android:background="@drawable/btn_background"

        />

    <Button
        android:id="@+id/btn_creat_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_creat_new_account"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="Creat New Account"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="18sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/text_View1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="You will not creating a Facebook profile"
        android:textSize="16sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/text_View2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="FORGET PASSWORD"
        android:textColor="@color/Black"
        tools:ignore="HardcodedText"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textSize="18sp"/>




</LinearLayout>
